--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Hello coursera!</title>
 </head>
 <body>
-<h1>Hello coursera!</h1>
+<h1>Hello coursera! This course is great but old</h1>
 </body>
 </html>
